index.css
body {
  position: relative;
  background-image: url("index/tricolorful.jpg");
  background-size: 100% 100%;
  background-attachment: fixed;
  text-align: center;
}

br {
  clear: both;
}

select {
  margin: 1em;
}

main > a {
  float: left;
  margin: 1em;
  position: relative;
  border-radius: 0.5em;
  width: 10em;
  height: 10em;
  background-color: rgba(0, 0, 0, 0.5);
}

main > a > * {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 0.5em;
  max-height: 100%;
  width: 100%;
  color: white;
}

